--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html>
 <head>
   <title>Treebook</title>
@@ -17,6 +17,8 @@
 		</div>
 	</div>
 	<div class="container">
+		<p class="notice"><%= notice %></p>
+       <p class="alert"><%= alert %></p>
 		<%= yield %>
 	</div>
 
